优化小数可选

--- a/src/app.ejs
+++ b/src/app.ejs
@@ -37,8 +37,8 @@
         <div class="grow"><input type="number" id="max" value="49" class="input input-sm input-bordered w-full max-w-xs"/></div>
     </div>
     <label class="label cursor-pointer inline-flex gap-2">
-        <input type="checkbox" checked="checked" class="checkbox checkbox-info" id="noDotNumber" />
-        <span class="label-text">不包含小数</span>
+        <input type="checkbox" class="checkbox checkbox-info" id="hasDotNumber" />
+        <span class="label-text">包含小数</span>
     </label>
     <div class="flex flex-row gap-2 mt-2">
         <button id="btn-start" class="btn btn-primary w-1/2">开始统计</button>
