优化选择范围时，更多选项的适配

--- a/src/app.ejs
+++ b/src/app.ejs
@@ -92,7 +92,8 @@
         <button id="btn-reset" class="btn btn-error w-1/2">清空</button>
     </div>
     <div class="text-sm text-gray-500 mt-2">
-        作者：<a href="https://www.microanswer.cn/" target="_blank">Microanswer</a>
+        作者：<a class="link" href="https://www.microanswer.cn/" target="_blank">Microanswer</a>&nbsp;&nbsp;
+        源码：<a class="link" href="https://github.com/Microanswer/template_tailwindcss_to_signle_html" target="_blank">template_tailwindcss_to_signle_html</a>
     </div>
 
     <br>
