--- a/src/app.ejs
+++ b/src/app.ejs
@@ -28,73 +28,132 @@
         </div>
     </div>
 
-    <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">输入数据</label>
+    <label class="flex flex-row justify-between text-sm font-bold leading-6 text-gray-500 mt-3">
+        <span>输入数据</span>
+        <button id="btnShowKeyInput" class="btn btn-xs btn-accent">通过字符输入</button>
+    </label>
     <textarea class="textarea textarea-bordered w-full mt-2" placeholder="输入数据" id="textareaIn" rows="6"></textarea>
 
-    <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">统计范围</label>
-    <div class="flex flex-col gap-2 mt-2">
+    <!-- 主功能面板 -->
+    <div id="mainBoardDom" class="hidden">
+        <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">统计范围</label>
+        <div class="flex flex-col gap-2 mt-2">
 
-        <div class="flex flex-row flex-wrap gap-2">
+            <div class="flex flex-row flex-wrap gap-2">
 
-            <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
-                <input type="radio" class="radio radio-xs" name="numberArea" checked value="0,50"/>
-                <span class="label-text text-gray-500">0~50</span>
-            </label>
-            <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
-                <input type="radio" class="radio radio-xs" name="numberArea" value="1,50"/>
-                <span class="label-text text-gray-500">1~50</span>
-            </label>
-            <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
-                <input type="radio" class="radio radio-xs" name="numberArea" value="0,100"/>
-                <span class="label-text text-gray-500">0~100</span>
-            </label>
-            <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
-                <input type="radio" class="radio radio-xs" name="numberArea" value="1,100"/>
-                <span class="label-text text-gray-500">1~100</span>
-            </label>
-            <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
-                <input type="radio" class="radio radio-xs" name="numberArea" value="50,100"/>
-                <span class="label-text text-gray-500">50~100</span>
-            </label>
-            <button class="btn btn-sm shadow-none py-2 h-auto" onclick="newAreaCreaterDom.classList.contains('hidden')?newAreaCreaterDom.classList.remove('hidden'):newAreaCreaterDom.classList.add('hidden')">
-                <span class="label-text font-bold" style="font-size: 18px">+</span>
-            </button>
-            <button class="btn btn-sm shadow-none py-2 h-auto hidden" id="clearUserArea">
-                <span class="label-text font-bold">清空新增范围</span>
-            </button>
-        </div>
+                <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
+                    <input type="radio" class="radio radio-xs" name="numberArea" checked value="0,50"/>
+                    <span class="label-text text-gray-500">0~50</span>
+                </label>
+                <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
+                    <input type="radio" class="radio radio-xs" name="numberArea" value="1,50"/>
+                    <span class="label-text text-gray-500">1~50</span>
+                </label>
+                <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
+                    <input type="radio" class="radio radio-xs" name="numberArea" value="0,100"/>
+                    <span class="label-text text-gray-500">0~100</span>
+                </label>
+                <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
+                    <input type="radio" class="radio radio-xs" name="numberArea" value="1,100"/>
+                    <span class="label-text text-gray-500">1~100</span>
+                </label>
+                <label class="label gap-2 bg-gray-50 border rounded-lg px-3 num-area">
+                    <input type="radio" class="radio radio-xs" name="numberArea" value="50,100"/>
+                    <span class="label-text text-gray-500">50~100</span>
+                </label>
+                <button class="btn btn-sm shadow-none py-2 h-auto" onclick="newAreaCreaterDom.classList.contains('hidden')?newAreaCreaterDom.classList.remove('hidden'):newAreaCreaterDom.classList.add('hidden')">
+                    <span class="label-text font-bold" style="font-size: 18px">+</span>
+                </button>
+                <button class="btn btn-sm shadow-none py-2 h-auto hidden" id="clearUserArea">
+                    <span class="label-text font-bold">清空新增范围</span>
+                </button>
+            </div>
 
-        <div class="bg-gray-50 p-2 rounded-md border hidden" id="newAreaCreaterDom">
-            <label class="block text-sm font-bold leading-6 text-gray-500">新增统计范围 <small class="text-gray-400 font-normal">仅会保存到此浏览器，清空浏览器缓存后将会消失。</small></label>
-            <div class="flex flex-row gap-2 items-center mt-2 mb-2">
-                <div><input type="number" id="min" placeholder="最小值" value="" class="input input-sm input-bordered w-24"/></div>
-                <div>~</div>
-                <div><input type="number" id="max" placeholder="最大值" value="" class="input input-sm input-bordered w-24"/></div>
-                <button class="btn btn-sm btn-success" id="addNewAreaBtn">保存</button>
-                <button class="btn btn-sm" onclick="newAreaCreaterDom.classList.add('hidden')">取消</button>
+            <div class="bg-gray-50 p-2 rounded-md border hidden" id="newAreaCreaterDom">
+                <label class="block text-sm font-bold leading-6 text-gray-500">新增统计范围 <small class="text-gray-400 font-normal">仅会保存到此浏览器，清空浏览器缓存后将会消失。</small></label>
+                <div class="flex flex-row gap-2 items-center mt-2 mb-2">
+                    <div><input type="number" id="min" placeholder="最小值" value="" class="input input-sm input-bordered w-24"/></div>
+                    <div>~</div>
+                    <div><input type="number" id="max" placeholder="最大值" value="" class="input input-sm input-bordered w-24"/></div>
+                    <button class="btn btn-sm btn-success" id="addNewAreaBtn">保存</button>
+                    <button class="btn btn-sm" onclick="newAreaCreaterDom.classList.add('hidden')">取消</button>
+                </div>
             </div>
         </div>
-    </div>
-    <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">更多选项</label>
-    <div class="flex gap-2">
-        <label class="label cursor-pointer inline-flex gap-2">
-            <input type="checkbox" class="checkbox checkbox-sm checkbox-info" id="hasDotNumber" />
-            <span class="label-text font-bold">包含小数</span>
-        </label>
+        <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">更多选项</label>
+        <div class="flex gap-2">
+            <label class="label cursor-pointer inline-flex gap-2">
+                <input type="checkbox" class="checkbox checkbox-sm checkbox-info" id="hasDotNumber" />
+                <span class="label-text font-bold">包含小数</span>
+            </label>
 
-        <label class="label cursor-pointer inline-flex gap-2">
-            <input type="checkbox" class="checkbox checkbox-sm checkbox-info" id="hasNNumber" />
-            <span class="label-text font-bold">包含负数</span>
-        </label>
+            <label class="label cursor-pointer inline-flex gap-2">
+                <input type="checkbox" class="checkbox checkbox-sm checkbox-info" id="hasNNumber" />
+                <span class="label-text font-bold">包含负数</span>
+            </label>
+        </div>
+        <div class="flex flex-row gap-2 mt-2">
+            <button id="btn-start" class="btn btn-primary grow">开始统计</button>
+            <button id="btn-reset" class="btn btn-error grow">清空</button>
+        </div>
+        <label id="resultTitle" class="block text-sm font-bold leading-6 text-gray-500 mt-3">统计结果</label>
+        <div id="resultMsg"
+             class="break-all w-full text-sm text-emerald-700 mt-2 px-2 py-1.5 border rounded-md shadow-sm min-h-52">
+            输入你的数字，再输入统计范围，开始统计即可得出结果。
+        </div>
     </div>
-    <div class="flex flex-row gap-2 mt-2">
-        <button id="btn-start" class="btn btn-primary w-1/2">开始统计</button>
-        <button id="btn-reset" class="btn btn-error w-1/2">清空</button>
-    </div>
-    <label id="resultTitle" class="block text-sm font-bold leading-6 text-gray-500 mt-3">统计结果</label>
-    <div id="resultMsg"
-         class="break-all w-full text-sm text-emerald-700 mt-2 px-2 py-1.5 border rounded-md shadow-sm min-h-52">
-        输入你的数字，再输入统计范围，开始统计即可得出结果。
+
+    <!-- 字符映射输入管理面板 -->
+    <div id="keyBoardDom" class="">
+        <label class="block text-sm font-bold leading-6 text-gray-500 mt-3">字符输入</label>
+        <div id="keyInputScreen" class="mt-2 border shadow-sm min-h-14 rounded-lg p-3 gap-3 flex flex-row flex-wrap items-center">
+            <div id="keyInputPlaceholder" class="text-gray-400 text-sm">点击下方按钮，输入对应数字组</div>
+        </div>
+
+        <!-- 字符键盘 -->
+        <div class="mt-2 flex flex-row flex-wrap gap-2">
+            <kbd class="my-key kbd select-none" data-numbers="01,13,25,37,49">龙</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="02,14,26,38">兔</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="03,15,27,39">虎</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="04,16,28,40">牛</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="05,17,29,41">鼠</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="06,18,30,42">猪</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="07,19,31,43">狗</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="08,20,32,44">鸡</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="09,21,33,45">猴</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="10,22,34,46">羊</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="11,23,35,47">马</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="12,24,36,48">蛇</kbd>
+
+            <kbd class="my-key kbd select-none" data-numbers="02,03,10,11,24,25,32,33,40,41">金</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="06,07,14,15,22,23,36,37,44,45">木</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="12,13,20,21,28,29,42,43">水</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="01,08,09,16,17,30,31,38,39,46,47">火</kbd>
+            <kbd class="my-key kbd select-none" data-numbers="04,05,48,49,26,27,34,35,48,49">土</kbd>
+        </div>
+
+        <div class="mt-2 p-2 border rounded-md shadow-sm bg-gray-100">
+            <kbd class="kbd select-none active:bg-gray-200">查看字符映射表</kbd>
+            <kbd class="kbd select-none text-amber-800 bg-amber-100 active:bg-amber-200" onclick="newCustomKeyCreaterDom.classList.remove('hidden')">新增字符映射</kbd>
+            <kbd class="kbd select-none text-red-800 bg-red-100 active:bg-red-200">删除字符映射</kbd>
+        </div>
+
+        <div class="bg-gray-50 mt-2 p-2 rounded-md border hidden" id="newCustomKeyCreaterDom">
+            <label class="block text-sm font-bold leading-6 text-gray-500">新增字符映射 <small class="text-gray-400 font-normal">仅会保存到此浏览器，清空浏览器缓存后将会消失。</small></label>
+            <div class="flex flex-row flex-wrap gap-2 items-center mt-2 mb-2">
+                <div><input type="text" id="customKeyInput" autocomplete="off" placeholder="输入字符" value="" class="input input-sm input-bordered w-24"/></div>
+                <div class="grow"><input type="text"  autocomplete="off" id="customKeyNumbersInput" placeholder="多个数字用,号隔开" value="" class="input input-sm input-bordered w-full"/></div>
+                <div class="w-full">
+                    <button class="btn btn-sm btn-success" id="btnAddNewCustomKey">保存</button>
+                    <button class="btn btn-sm" onclick="newCustomKeyCreaterDom.classList.add('hidden')">取消</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex flex-row mt-2 gap-2">
+            <button id="btnKeyBoardOk" class="btn btn-success btn-sm">输入完成</button>
+            <button id="btnKeyBoardClear" class="btn btn-sm">清空输入</button>
+        </div>
     </div>
 
     <div class="text-sm text-gray-500 mt-3">
@@ -102,6 +161,13 @@
         作者：<a class="link" href="https://www.microanswer.cn/" target="_blank">Microanswer</a>&nbsp;&nbsp;
         源码：<a class="link" href="https://github.com/Microanswer/template_tailwindcss_to_signle_html"
                 target="_blank">template_tailwindcss_to_signle_html</a>
+    </div>
+
+
+    <!-- 字符输入显示到 keyInputScreen 中的内容 -->
+    <div id="templateKey" class="indicator hidden inputed-key" data-key="" data-numbers="">
+        <span class="key-del badge indicator-item indicator-top indicator-end badge-sm badge-error text-xs select-none active:bg-red-200 active:scale-75">-</span>
+        <div class="key-text bg-gray-200 border rounded-lg text-sm px-2 py-1 select-none font-bold"></div>
     </div>
 </div>
 </body>
