--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui" {
+
+}
 
 html {
     scrollbar-gutter: auto !important;
